commit des modifs on almost everything