@@ -4,67 +4,100 @@ import l3m.cyber.planner.requests.PlannerParameter;
 import l3m.cyber.planner.responses.PlannerResult;
 
 import java.util.ArrayList;
-import java.util.List;
+import java.util.HashSet;
+import java.util.LinkedHashSet;
 
 
+// Classe Planner : planifie les tournées de livraison pour un ensemble de lieux donnés
 public class Planner {
 
-    private Double[][] distances;
-    private Integer k;
-    private Integer debut;
-    private Partition partition;
+    private Double[][] distances; // distances entre chaque paire de lieux
+    private Integer k; // nombre de livreurs disponibles
+    private Integer debut; // point de départ des tournées
+    private Partition partition; // partitionne les lieux entre les livreurs
 
-    private ArrayList<ArrayList<Integer>> tournees;
-    private ArrayList<Double> longTournees;
+    private ArrayList<ArrayList<Integer>> tournees; // tournées de chaque livreur
+    private ArrayList<Double> longTournees; // longueurs des tournées
 
+    // Constructeur prenant un objet PlannerParameter en paramètre
     public Planner(PlannerParameter param) {
         this(param.matrix(), param.k(), param.start());
     }
 
+    // Constructeur prenant un tableau 2D de doubles et deux entiers en paramètre
     public Planner(Double[][] distances, int k, int debut) {
         this.distances = distances;
         this.k = k;
         this.debut = debut;
     }
 
+    // Constructeur par défaut
     public Planner() {
         this(null, 0, 0);
     }
 
+    // Méthode divise : divise les lieux entre les livreurs et calcule les tournées
     public void divise() {
-        // Utilisez la classe Partition pour diviser les livreurs en groupes
-        partition = new PartitionAlea(distances.length, k);
+        if (k > distances.length) {
+            throw new IllegalArgumentException("k cannot be greater than the number of elements to partition");
+        }
+    
+        // Create a partition object and partition the elements
+        partition = new PartitionKCentres(distances.length, k);
         partition.partitionne(distances);
 
         tournees = new ArrayList<ArrayList<Integer>>();
-        for (int i = 0; i < k; i++) {
+
+        for(int i=0; i<k; i++) {
             tournees.add(partition.getPartie(i));
         }
-
-        // Calculer les longueurs des tournées
-        calculeLongTournees();
+    
+        // Calculate the tournees and longTournees
+       
     }
 
+    // Méthode result : retourne un objet PlannerResult contenant les tournées et leurs longueurs
     public PlannerResult result() {
         return new PlannerResult(tournees, longTournees);
     }
 
-    public ArrayList<Integer> calculeUneTournee(ArrayList<Integer> selec) {
-        // Calcule une tournée à partir d'une sélection de sommets
-        Double[][] sousMatrice = extraireSousMatrice(selec);
-        Graphe graphe = new Graphe(sousMatrice, selec);
-        Graphe tsp = graphe.tsp2();
-        return tsp.getNomSommets();
-    }
-
+    // Méthode calculeTournees : calcule les tournées pour chaque groupe de livreurs
     public void calculeTournees() {
-        // Calcule toutes les tournées pour chaque groupe de livreurs
+       /*  HashSet<Integer> livreursInclus = new HashSet<>(); // ensemble de livreurs déjà inclus dans une tournée
         for (int i = 0; i < tournees.size(); i++) {
             ArrayList<Integer> livreurs = partition.getPartie(i);
-            tournees.add(calculeUneTournee(livreurs));
+            if (livreursInclus.containsAll(livreurs)) {
+                // Si tous les livreurs d'une partie sont déjà inclus, passez à la partie suivante
+                continue;
+            }
+            LinkedHashSet<Integer> tournee = calculeUneTournee(livreurs);
+            tournees.add(new ArrayList<>(tournee));
+            livreursInclus.addAll(tournee);
+        } */ 
+
+        for (int i = 0; i < tournees.size(); i++) {
+            ArrayList<Integer> listElem = tournees.get(i);
+            ArrayList<Integer> tournee = calculeUneTournee(listElem);
+            tournees.set(i, tournee);
         }
     }
 
+    // Méthode calculeUneTournee : calcule une tournée pour un ensemble donné de livreurs
+    public ArrayList<Integer> calculeUneTournee(ArrayList<Integer> selec) {
+        // Crée une sous-matrice à partir des distances entre les lieux sélectionnés
+        Double[][] sousMatrice = extraireSousMatrice(selec);
+        // Crée un graphe à partir de la sous-matrice
+        Graphe graphe = new Graphe(sousMatrice, selec);
+        // Résout le problème du voyageur de commerce pour le graphe
+        Graphe tsp = graphe.tsp2();
+
+        // Convertit le résultat du TSP en un ensemble d'entiers sans doublons
+        ArrayList<Integer> tournee = new ArrayList<>(tsp.getNomSommets());
+
+        return tournee;
+    }
+
+    // Méthode calculeLongTournees : calcule la longueur de chaque tournée
     public void calculeLongTournees() {
         longTournees = new ArrayList<Double>();
         for (ArrayList<Integer> listElem : tournees) {
@@ -72,10 +105,13 @@ public class Planner {
             for (int j = 0; j < listElem.size() - 1; j++) {
                 longueur += distances[listElem.get(j)][listElem.get(j + 1)];
             }
-            longueur += distances[listElem.getLast()][listElem.getFirst()];
-        longTournees.add(longueur);
+            longueur += distances[listElem.get(0)][listElem.get(listElem.size() - 1)];
+            longTournees.add(longueur);
         }
     }
+
+
+    // Méthode extraireSousMatrice : extrait une sous-matrice du tableau distances
     private Double[][] extraireSousMatrice(ArrayList<Integer> livreurs) {
         int n = livreurs.size();
         Double[][] sousMatrice = new Double[n][n];
